[gd_scene load_steps=19 format=2]

[ext_resource path="res://Minijuegos/Lobo/HUD_Lobo.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/img/Monedas/Gold/gold_coin_round_star_1.png" type="Texture" id=3]
[ext_resource path="res://assets/img/Bonus/object_05_heart.png" type="Texture" id=4]
[ext_resource path="res://assets/img/pause.png" type="Texture" id=5]
[ext_resource path="res://assets/img/Iconos/volver.png" type="Texture" id=6]
[ext_resource path="res://assets/letters/letterN.png" type="Texture" id=7]
[ext_resource path="res://assets/letters/letterE.png" type="Texture" id=8]
[ext_resource path="res://assets/letters/letterI.png" type="Texture" id=9]
[ext_resource path="res://assets/letters/letterV.png" type="Texture" id=10]
[ext_resource path="res://assets/img/Iconos/UIbg.png" type="Texture" id=11]
[ext_resource path="res://assets/letters/letterL.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]
size = 55
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 55
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 60
outline_color = Color( 0.113725, 0.101961, 0.101961, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 42
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 35
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -135.0
margin_right = 135.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="Coin" type="Sprite" parent="ScoreLabel"]
position = Vector2( -32, 34 )
texture = ExtResource( 3 )

[node name="VidaLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -159.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 2 )
text = "3"

[node name="Heart" type="Sprite" parent="VidaLabel"]
position = Vector2( -31, 34 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 4 )

[node name="StartButton" type="Button" parent="."]
anchor_top = 0.773
anchor_right = 0.992
anchor_bottom = 0.853
margin_left = 384.0
margin_top = -23.8
margin_right = -375.808
margin_bottom = 12.2
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Jugar"

[node name="JugarDeNuevo" type="Button" parent="."]
visible = false
anchor_left = 0.352539
anchor_top = 0.625
anchor_right = 0.636719
anchor_bottom = 0.713333
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Jugar de nuevo"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureButton" type="TextureButton" parent="."]
pause_mode = 2
margin_left = 136.0
margin_right = 186.0
margin_bottom = 50.0
texture_normal = ExtResource( 5 )

[node name="Juego_Ganado" type="RichTextLabel" parent="."]
visible = false
margin_left = 356.0
margin_top = 153.0
margin_right = 687.0
margin_bottom = 383.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/selection_color = Color( 0.0156863, 0.00784314, 0.00784314, 1 )
custom_colors/font_color_selected = Color( 0.0352941, 0.00784314, 0.00784314, 1 )
custom_colors/font_color_shadow = Color( 0.054902, 0.0117647, 0.0117647, 1 )
custom_fonts/normal_font = SubResource( 4 )
text = "Ganaste!"

[node name="ColorRect" type="ColorRect" parent="Juego_Ganado"]
show_behind_parent = true
margin_left = -2.0
margin_top = -1.0
margin_right = 334.0
margin_bottom = 159.0
color = Color( 0.0235294, 1, 0.792157, 1 )

[node name="ScoreFinish" type="Label" parent="Juego_Ganado"]
margin_left = 172.0
margin_top = 99.0
margin_right = 234.0
margin_bottom = 170.0
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="Coin" type="Sprite" parent="Juego_Ganado/ScoreFinish"]
position = Vector2( -31, 26 )
texture = ExtResource( 3 )

[node name="Juego_Perdido" type="RichTextLabel" parent="."]
visible = false
margin_left = 356.0
margin_top = 153.0
margin_right = 687.0
margin_bottom = 383.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/selection_color = Color( 0.0156863, 0.00784314, 0.00784314, 1 )
custom_colors/font_color_selected = Color( 0.0352941, 0.00784314, 0.00784314, 1 )
custom_colors/font_color_shadow = Color( 0.054902, 0.0117647, 0.0117647, 1 )
custom_fonts/normal_font = SubResource( 4 )
text = "Perdiste :("

[node name="ColorRect" type="ColorRect" parent="Juego_Perdido"]
show_behind_parent = true
margin_left = -2.0
margin_top = -1.0
margin_right = 334.0
margin_bottom = 159.0
color = Color( 1, 0.482353, 0.0235294, 1 )

[node name="ScoreFinish" type="Label" parent="Juego_Perdido"]
margin_left = 172.0
margin_top = 99.0
margin_right = 234.0
margin_bottom = 170.0
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="Coin" type="Sprite" parent="Juego_Perdido/ScoreFinish"]
position = Vector2( -31, 26 )
texture = ExtResource( 3 )

[node name="volver" type="TextureButton" parent="."]
margin_left = 951.0
margin_top = 8.0
margin_right = 999.0
margin_bottom = 56.0
texture_normal = ExtResource( 6 )

[node name="Niveles" type="Sprite" parent="."]
visible = false
position = Vector2( 508, 275 )
scale = Vector2( 1.06061, 1.05303 )
texture = ExtResource( 11 )

[node name="Letters" type="Control" parent="Niveles"]
margin_right = 40.0
margin_bottom = 40.0

[node name="LetterN" type="Sprite" parent="Niveles/Letters"]
position = Vector2( -98.1143, -95 )
texture = ExtResource( 7 )

[node name="LetterI" type="Sprite" parent="Niveles/Letters"]
position = Vector2( -53.7433, -95 )
scale = Vector2( 1, 1 )
texture = ExtResource( 9 )

[node name="LetterV" type="Sprite" parent="Niveles/Letters"]
position = Vector2( -6.60042, -95 )
scale = Vector2( 1, 1 )
texture = ExtResource( 10 )

[node name="LetterE" type="Sprite" parent="Niveles/Letters"]
position = Vector2( 49.029, -95 )
texture = ExtResource( 8 )

[node name="LetterL" type="Sprite" parent="Niveles/Letters"]
position = Vector2( 99.9432, -95 )
scale = Vector2( 1, 1 )
texture = ExtResource( 12 )

[node name="Medio" type="Button" parent="Niveles"]
margin_left = -58.4572
margin_top = 11.3956
margin_right = 66.5428
margin_bottom = 60.3956
custom_fonts/font = SubResource( 7 )
text = "Medio"
flat = true

[node name="Dificil" type="Button" parent="Niveles"]
margin_left = -49.0286
margin_top = 65.5251
margin_right = 61.9714
margin_bottom = 114.525
custom_fonts/font = SubResource( 7 )
text = "Dificil"
flat = true

[node name="Facil" type="Button" parent="Niveles"]
margin_left = -55.6286
margin_top = -44.6332
margin_right = 62.3714
margin_bottom = 4.36684
custom_fonts/font = SubResource( 7 )
text = "FÃ¡cil"
flat = true

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="JugarDeNuevo" to="." method="_on_JugarDeNuevo_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_pause_pressed"]
[connection signal="pressed" from="volver" to="." method="_on_volver_pressed"]
[connection signal="pressed" from="Niveles/Medio" to="." method="_on_Medio_pressed"]
[connection signal="pressed" from="Niveles/Dificil" to="." method="_on_Dificil_pressed"]
[connection signal="pressed" from="Niveles/Facil" to="." method="_on_Facil_pressed"]
